--- a/CustomDeathMessages/CustomDeathMessages.csproj
+++ b/CustomDeathMessages/CustomDeathMessages.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7EE4C9FC-1060-486E-86E4-5FB8FEF570FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutoServer</RootNamespace>
-    <AssemblyName>AutoServer.plugin</AssemblyName>
+    <RootNamespace>CustomDeathMessages</RootNamespace>
+    <AssemblyName>CustomDeathMessages.plugin</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -46,13 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entry.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="States\BaseState.cs" />
-    <Compile Include="States\InitializeServerState.cs" />
-    <Compile Include="States\StateMachine.cs" />
-    <Compile Include="Utilities\Log.cs" />
-    <Compile Include="Utilities\Server.cs" />
-    <Compile Include="Utilities\TimedAction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -63,6 +58,10 @@
   </Target>
   -->
   <ItemGroup>
+    <ProjectReference Include="..\Harmony\Harmony\Harmony.csproj">
+      <Project>{69AEE16A-B6E7-4642-8081-3928B32455DF}</Project>
+      <Name>Harmony</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Spectrum\Spectrum.API\Spectrum.API.csproj">
       <Project>{a9cfd86d-1604-4c80-b02b-e60ad98ba86f}</Project>
       <Name>Spectrum.API</Name>
